# LEZIONE-PYTHON

./: README.md  main.py  pyproject.toml  sales.ipynb  tutorial.ipynb
